@@ -39,22 +39,6 @@
        <widget class="ToolButton" name="nextTrackButton"/>
       </item>
       <item>
-       <spacer name="coverWidgetSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeType">
-         <enum>QSizePolicy::Fixed</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>4</width>
-          <height>4</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
        <widget class="CoverWidget" name="coverWidget"/>
       </item>
       <item>
