@@ -37,16 +37,137 @@
 #include <QMouseEvent>
 #include <QApplication>
 #include <QPainter>
+#include <QBoxLayout>
+#include <QSpacerItem>
 
 static const int constBorder=1;
 
-CoverWidget::CoverWidget(QWidget *parent)
-    : QLabel(parent)
-    , pressed(false)
-    , pix(0)
+class CoverLabel : public QLabel
 {
-    setStyleSheet(QString("QLabel {border: %1px solid transparent} QToolTip {background-color:#111111; color: #DDDDDD}").arg(constBorder));
-    setAttribute(Qt::WA_Hover, true);
+public:
+    CoverLabel(QWidget *p)
+        : QLabel(p)
+        , pressed(false)
+        , pix(0)
+    {
+    }
+
+    bool event(QEvent *event)
+    {
+        switch(event->type()) {
+        case QEvent::ToolTip: {
+            const Song &current=CurrentCover::self()->song();
+            if (current.isEmpty() || (current.isStream() && !current.isCantataStream() && !current.isCdda())
+                #ifdef ENABLE_ONLINE_SERVICES
+                || OnlineService::showLogoAsCover(current)
+                #endif
+                ) {
+                setToolTip(QString());
+                break;
+            }
+            QString toolTip=QLatin1String("<table>");
+            const QImage &img=CurrentCover::self()->image();
+
+            if (!current.composer().isEmpty()) {
+                toolTip+=i18n("<tr><td align=\"right\"><b>Composer:</b></td><td>%1</td></tr>", current.composer());
+            }
+            if (!current.performer().isEmpty() && current.performer()!=current.albumArtist()) {
+                toolTip+=i18n("<tr><td align=\"right\"><b>Performer:</b></td><td>%1</td></tr>", current.performer());
+            }
+            toolTip+=i18n("<tr><td align=\"right\"><b>Artist:</b></td><td>%1</td></tr>"
+                          "<tr><td align=\"right\"><b>Album:</b></td><td>%2</td></tr>"
+                          "<tr><td align=\"right\"><b>Year:</b></td><td>%3</td></tr>", current.albumArtist(), current.album, QString::number(current.year));
+            toolTip+="</table>";
+            if (!img.isNull()) {
+                if (img.size().width()>Covers::constMaxSize.width() || img.size().height()>Covers::constMaxSize.height()) {
+                    toolTip+=QString("<br/>%1").arg(View::encode(img.scaled(Covers::constMaxSize, Qt::KeepAspectRatio, Qt::SmoothTransformation)));
+                } else if (CurrentCover::self()->fileName().isEmpty() || !QFile::exists(CurrentCover::self()->fileName())) {
+                    toolTip+=QString("<br/>%1").arg(View::encode(img));
+                } else {
+                    toolTip+=QString("<br/><img src=\"%1\"/>").arg(CurrentCover::self()->fileName());
+                }
+            }
+            setToolTip(toolTip);
+            break;
+        }
+        case QEvent::MouseButtonPress:
+            if (Qt::LeftButton==static_cast<QMouseEvent *>(event)->button() && Qt::NoModifier==static_cast<QMouseEvent *>(event)->modifiers()) {
+                pressed=true;
+            }
+            break;
+        case QEvent::MouseButtonRelease:
+            if (pressed && Qt::LeftButton==static_cast<QMouseEvent *>(event)->button() && !QApplication::overrideCursor()) {
+                static_cast<CoverWidget*>(parentWidget())->emitClicked();
+            }
+            pressed=false;
+            break;
+        default:
+            break;
+        }
+        return QLabel::event(event);
+    }
+
+    void paintEvent(QPaintEvent *)
+    {
+        if (!pix) {
+            return;
+        }
+        QPainter p(this);
+        QRect r((width()-pix->width())/2, (height()-pix->height())/2, pix->width(), pix->height());
+        p.drawPixmap(r.x(), r.y(), *pix);
+        if (underMouse()) {
+            p.setRenderHint(QPainter::Antialiasing);
+            p.setPen(QPen(palette().color(QPalette::Highlight), 2));
+            p.drawPath(Utils::buildPath(QRectF(r.x()+0.5, r.y()+0.5, r.width()-1, r.height()-1), pix->width()>128 ? 6 : 4));
+        }
+    }
+
+    void updatePix()
+    {
+        QImage img=CurrentCover::self()->image();
+        if (img.isNull()) {
+            return;
+        }
+        int size=height();
+        img=img.scaled(size, size, Qt::KeepAspectRatio, Qt::SmoothTransformation);
+        if (pix && pix->size()!=img.size()) {
+            delete pix;
+            pix=0;
+        }
+        if (!pix) {
+            pix=new QPixmap(img.size());
+        }
+        pix->fill(Qt::transparent);
+        QPainter painter(pix);
+        painter.setRenderHint(QPainter::Antialiasing);
+        painter.fillPath(Utils::buildPath(QRectF(0, 0, img.width(), img.height()), img.width()>128 ? 6.5 : 4.5), img);
+        repaint();
+    }
+
+    void deletePix()
+    {
+        if (pix) {
+            delete pix;
+            pix=0;
+        }
+    }
+
+private:
+    bool pressed;
+    QPixmap *pix;
+};
+
+CoverWidget::CoverWidget(QWidget *parent)
+    : QWidget(parent)
+{
+    QBoxLayout *l=new QBoxLayout(QBoxLayout::LeftToRight, this);
+    l->setMargin(0);
+    l->setSpacing(0);
+    l->addItem(new QSpacerItem(Utils::layoutSpacing(this), 4, QSizePolicy::Fixed, QSizePolicy::Fixed));
+    label=new CoverLabel(this);
+    l->addWidget(label);
+    label->setStyleSheet(QString("QLabel {border: %1px solid transparent} QToolTip {background-color:#111111; color: #DDDDDD}").arg(constBorder));
+    label->setAttribute(Qt::WA_Hover, true);
 }
 
 CoverWidget::~CoverWidget()
@@ -58,7 +179,7 @@ void CoverWidget::setSize(int min)
     #ifdef Q_OS_MAC
     min*=0.9;
     #endif
-    setFixedSize(min, min);
+    label->setFixedSize(min, min);
 }
 
 void CoverWidget::setEnabled(bool e)
@@ -67,104 +188,14 @@ void CoverWidget::setEnabled(bool e)
         connect(CurrentCover::self(), SIGNAL(coverImage(QImage)), this, SLOT(coverImage(QImage)));
         coverImage(QImage());
     } else {
-        if (pix) {
-            delete pix;
-            pix=0;
-        }
+        label->deletePix();
         disconnect(CurrentCover::self(), SIGNAL(coverImage(QImage)), this, SLOT(coverImage(QImage)));
     }
     setVisible(e);
-    QLabel::setEnabled(e);
-}
-
-bool CoverWidget::event(QEvent *event)
-{
-    switch(event->type()) {
-    case QEvent::ToolTip: {
-        const Song &current=CurrentCover::self()->song();
-        if (current.isEmpty() || (current.isStream() && !current.isCantataStream() && !current.isCdda())
-            #ifdef ENABLE_ONLINE_SERVICES
-            || OnlineService::showLogoAsCover(current)
-            #endif
-            ) {
-            setToolTip(QString());
-            break;
-        }
-        QString toolTip=QLatin1String("<table>");
-        const QImage &img=CurrentCover::self()->image();
-
-        if (!current.composer().isEmpty()) {
-            toolTip+=i18n("<tr><td align=\"right\"><b>Composer:</b></td><td>%1</td></tr>", current.composer());
-        }
-        if (!current.performer().isEmpty() && current.performer()!=current.albumArtist()) {
-            toolTip+=i18n("<tr><td align=\"right\"><b>Performer:</b></td><td>%1</td></tr>", current.performer());
-        }
-        toolTip+=i18n("<tr><td align=\"right\"><b>Artist:</b></td><td>%1</td></tr>"
-                      "<tr><td align=\"right\"><b>Album:</b></td><td>%2</td></tr>"
-                      "<tr><td align=\"right\"><b>Year:</b></td><td>%3</td></tr>", current.albumArtist(), current.album, QString::number(current.year));
-        toolTip+="</table>";
-        if (!img.isNull()) {
-            if (img.size().width()>Covers::constMaxSize.width() || img.size().height()>Covers::constMaxSize.height()) {
-                toolTip+=QString("<br/>%1").arg(View::encode(img.scaled(Covers::constMaxSize, Qt::KeepAspectRatio, Qt::SmoothTransformation)));
-            } else if (CurrentCover::self()->fileName().isEmpty() || !QFile::exists(CurrentCover::self()->fileName())) {
-                toolTip+=QString("<br/>%1").arg(View::encode(img));
-            } else {
-                toolTip+=QString("<br/><img src=\"%1\"/>").arg(CurrentCover::self()->fileName());
-            }
-        }
-        setToolTip(toolTip);
-        break;
-    }
-    case QEvent::MouseButtonPress:
-        if (Qt::LeftButton==static_cast<QMouseEvent *>(event)->button() && Qt::NoModifier==static_cast<QMouseEvent *>(event)->modifiers()) {
-            pressed=true;
-        }
-        break;
-    case QEvent::MouseButtonRelease:
-        if (pressed && Qt::LeftButton==static_cast<QMouseEvent *>(event)->button() && !QApplication::overrideCursor()) {
-            emit clicked();
-        }
-        pressed=false;
-        break;
-    default:
-        break;
-    }
-    return QLabel::event(event);
-}
-
-void CoverWidget::paintEvent(QPaintEvent *)
-{
-    if (!pix) {
-        return;
-    }
-    QPainter p(this);
-    QRect r((width()-pix->width())/2, (height()-pix->height())/2, pix->width(), pix->height());
-    p.drawPixmap(r.x(), r.y(), *pix);
-    if (underMouse()) {
-        p.setRenderHint(QPainter::Antialiasing);
-        p.setPen(QPen(palette().color(QPalette::Highlight), 2));
-        p.drawPath(Utils::buildPath(QRectF(r.x()+0.5, r.y()+0.5, r.width()-1, r.height()-1), pix->width()>128 ? 6 : 4));
-    }
+    label->setEnabled(e);
 }
 
 void CoverWidget::coverImage(const QImage &)
 {
-    QImage img=CurrentCover::self()->image();
-    if (img.isNull()) {
-        return;
-    }
-    int size=height();
-    img=img.scaled(size, size, Qt::KeepAspectRatio, Qt::SmoothTransformation);
-    if (pix && pix->size()!=img.size()) {
-        delete pix;
-        pix=0;
-    }
-    if (!pix) {
-        pix=new QPixmap(img.size());
-    }
-    pix->fill(Qt::transparent);
-    QPainter painter(pix);
-    painter.setRenderHint(QPainter::Antialiasing);
-    painter.fillPath(Utils::buildPath(QRectF(0, 0, img.width(), img.height()), img.width()>128 ? 6.5 : 4.5), img);
-    repaint();
+    label->updatePix();
 }
